# rantoni

./: CREDITS.md  Cargo.toml  README.md  push_to_itch.sh
.github/workflows/: release.yml
assets/: arc.trickfilm.ron
assets/attack/: arc.trickfilm.ron
assets/dude/: dude.trickfilm.ron
assets/effect/: effects.trickfilm.ron
assets/enemy/goon/: goon.trickfilm.ron
assets/map/: map.ldtk  polygons.data
assets/player/: player.trickfilm.ron
generate_world_collisions/: Cargo.toml
generate_world_collisions/src/: decomposition.rs  geometry.rs  graph.rs  ldtk_bridge.rs  lib.rs  main.rs  matrix.rs  serialization.rs
src/: assets.rs  main.rs
src/assets/: animations.rs  events.rs  mod.rs
src/audio/: mod.rs  sound.rs
src/dude/: animations.rs  attack.rs  health.rs  mod.rs  stagger.rs
src/enemy/: animation.rs  collisions.rs  crowd.rs  health.rs  mod.rs  movement.rs  spawn.rs  state.rs
src/enemy/state/: attack.rs  mod.rs  state_machine.rs
src/player/: animation.rs  collisions.rs  mod.rs  movement.rs  spawn.rs  state.rs
src/player/input/: auto_input.rs  controller.rs  gamepad.rs  gaming_input.rs  global_input.rs  handler.rs  menu_input.rs  mod.rs  relay.rs
src/player/state/: attack.rs  dashing.rs  jumping.rs  mod.rs  state_machine.rs
src/state/: attack.rs  mod.rs  stagger.rs
src/ui/: audio_bar.rs  game_over.rs  health.rs  main_menu.rs  mod.rs  screen_fade.rs  splash_screen.rs
src/world/: camera.rs  collision.rs  collisions.rs  debug.rs  mod.rs  physics.rs  stagger.rs  state.rs  utils.rs
src/world/camera/: mod.rs  update.rs
wasm/: index.html
(+4 files in other folders)
