[package]
name = "rantoni"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# https://github.com/rust-lang/cargo/issues/4897
[profile.wasm]
inherits = "release"
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
chrono = "0.4.38"

bevy = "0.14.2"
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy_rapier2d = "0.27.0"
bevy_kira_audio = "0.20.0"
noisy_bevy = "0.7.0"
bevy_tweening = { version = "0.11.0", features = ["bevy_ui"]}
bevy_particle_systems = "0.13.0"
# bevy_trickfilm = "0.8.0"
bevy_trickfilm = { git = "https://github.com/PraxTube/bevy_trickfilm", branch = "main" }
bevy_rancic = { git = "https://github.com/PraxTube/bevy_rancic", branch = "master" }

[features]
auto_input = []
